Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://gabriel-macario/github.io/friends-with-grudges",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
