--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "homepage": "https://gabriel-macario/github.io/friends-with-grudges",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
